Get active transfers onto home page

--- a/app/views/transfers/_change_transfer_status.html.erb
+++ b/app/views/transfers/_change_transfer_status.html.erb
@@ -2,6 +2,10 @@
   <% if transfer.team_transfer_status(team) == 'accepted' %>
   	<%= link_to "Reject", change_response_league_transfer_path(league, @transfer), method: :patch, class: "mdl-button--secondary" %>
   <% else %>
-  	<%= link_to "Accept", change_response_league_transfer_path(league, @transfer), method: :patch, class: "mdl-button--primary" %>
+    <% if !GameWeek.has_current_game_week %>
+  	 <%= link_to "Accept", change_response_league_transfer_path(league, @transfer), method: :patch, class: "mdl-button--primary" %>
+    <% else %>
+      <span class="disabled_mdl-button--primary">Accept</span>
+    <% end %>
   <% end %>
 <% end %>
