--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -95,6 +95,13 @@ span.skooch-right {
 	text-align: right;
 	width: 100%;	
 }
+span.disabled_mdl-button--primary {
+  color: #bbbbbb;
+  display: block;
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+}
 table {
 	width: 100%;
 }
