Move active transfers to home page and condense player search

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -134,6 +134,18 @@ td.transfer-item-cell {
 	font-size: 23px;
 	text-align: center;
 }
+#search_form_switch_div{
+  float: left;
+  text-align: center;
+  width: 40%;
+}
+#search_form_switch_label{
+  text-align: center;
+  width: 20%;
+}
+#search_form_switch_span{
+  padding: 9px 0px;
+}
 #wide-container{
 	min-width: 900px;
 }
