--- a/app/views/transfers/_your_active_transfer_headline.html.erb
+++ b/app/views/transfers/_your_active_transfer_headline.html.erb
@@ -1,5 +1,7 @@
 <% this_transfer_is_auto_completing = transfer.is_auto_completing %>
 <% if this_transfer_is_auto_completing %>
   <i class="material-icons large <%= transfer.is_winning_bid ? 'success' : 'error' %>">playlist_add_check</i>
+  Transfer auto-completes in <%= "#{time_ago_in_words(transfer.transfer_listing_completes_at, include_seconds: false)}" %>.
+<% else %>
+  Transfer initiated <%= time_ago_in_words(transfer.created_at, include_seconds: false) %> ago.
 <% end %>
-Created <%= time_ago_in_words(transfer.created_at, include_seconds: false) %> ago <%= this_transfer_is_auto_completing ? "(Completes in #{time_ago_in_words(transfer.transfer_listing_completes_at, include_seconds: false)})" : "" %>
