--- a/app/views/shared/_player_game_week_table.html.erb
+++ b/app/views/shared/_player_game_week_table.html.erb
@@ -49,7 +49,7 @@
 		<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
 			<tr>
 				<th class="mdl-data-table__cell--non-numeric">
-					<span>Season</span>
+					<span>Sn</span>
 				</th>
 				<th>
 					<span>GW</span>
@@ -65,6 +65,9 @@
 				</th>
 				<th>
 					<span>Gc</span>
+				</th>
+				<th>
+					<span>Val</span>
 				</th>
 			</tr>
 			<% player.player_game_weeks.joins(:game_week).order("game_weeks.starts_at DESC").each do |pgw| %>
@@ -86,6 +89,9 @@
 					</td>
 					<td class="normal-text">
 						<%= pgw.goals_conceded.to_f %>
+					</td>
+					<td class="normal-text">
+						<%= number_to_currency(number_to_human(pgw.player_value, precision: 1, separator: '.', significant: false)) %>
 					</td>
 				</tr>
 			<% end %>
