Back fill player values

--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -41,6 +41,6 @@
 		</div>
 	</div>
 	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-		<%= render partial: 'shared/player_game_week_table', locals: {player: @player} %>
+		<%= render partial: 'shared/player_game_week_table', locals: {player: @player, show_value: false} %>
 	</div>
 </div>
