--- a/app/views/shared/_player_info.html.erb
+++ b/app/views/shared/_player_info.html.erb
@@ -27,7 +27,7 @@
         Contract
       </td>
       <td class="mdl-data-table__cell--non-numeric normal-text">
-        <%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %> p/w until <%= team_player.current_contract.ends_at.strftime("%d %b %y") %>
+        <%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %> pw until <%= team_player.current_contract.ends_at.strftime("%d %b %y") %>
       </td>
     </tr>
     <tr>
