--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -54,6 +54,14 @@
 							<%= @team_player.player.display_news %>
 						</td>
 					</tr>
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							Happiness
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2">
+							<%= @team_player.happiness %>
+						</td>
+					</tr>
 				</table>
 			</div>
 			<div class="mdl-card__supporting-text">
