Smoothen the oboarding flow

--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -3,8 +3,7 @@
   <div class="demo-card-wide mdl-card mdl-shadow--2dp">
 		<div class="mdl-card__title">
 			<h2 class="mdl-card__title-text">
-				<%= link_to @league.name, league_path(@league), class: "content-link" %>
-        <span>&nbsp;new team</span>
+        <span>Create team</span>
 			</h2>
 		</div>
 			<%= render 'form' %>
