--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -18,7 +18,7 @@
   <div class="mdl-card__actions">
     <div class="form-group">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <%= f.text_field :name, class: "mdl-textfield__input" %>
+        <%= f.text_field :name, value: "#{Faker::Superhero.prefix.titleize} #{Faker::Dessert.variety.titleize.pluralize}", class: "mdl-textfield__input" %>
         <%= f.label :name, "League name", class: "mdl-textfield__label" %>
         <%= f.hidden_field :competition_id, value: Competition.first.id %>
       </div>
